crates/kaya/include/kaya.h

/**
 * What a number formatter may be told; -1 leaves the platform's default.
 */
typedef struct KayaNumberOptions {
  int32_t min_fraction_digits;
  int32_t max_fraction_digits;
  bool grouping;
} KayaNumberOptions;
/**
 * One argument to `kaya_tr`.
 */
typedef struct KayaTrArg {
  const char *name;
  uint32_t tag;
  int64_t i;
  double f;
  const char *s;
} KayaTrArg;
extern void *dlsym(void *handle, const char *symbol);
/**
 * The protocol fingerprint this core was built from. Bindings carry the
 * same value baked in at generation and assert agreement at load, so a
 * stale library and a fresh guest fail loudly at startup instead of
 * decoding each other's bytes as garbage.
 */
uint64_t kaya_spec_hash(void);
/**
 * The capability word, which is the SCENE CORE'S const and not a second
 * copy of its predicate: the wall that refuses `create_window` tests the
 * same bits this hands out (crates/kaya/src/scene.rs) — plus the runtime
 * bits the presentation layer granted.
 */
uint64_t kaya_capabilities(void);
/**
 * Take over the calling thread, which must be the process main thread,
 * and run the core. Returns when the app exits, with the exit code; the
 * host decides how to terminate its own process.
 */
int32_t kaya_run(void);
/**
 * Register bulk payload bytes and get the handle the next submitted
 * transaction references them by. One copy, into core-owned memory;
 * `len` is a usize — blob size is bounded by memory, never by any wire
 * or pump buffer, because the bytes never enter a record stream. The
 * handle is consumed by the next kaya_submit, referenced or not.
 */
uint64_t kaya_blob_register(const uint8_t *bytes, uintptr_t len);
/**
 * Open an asset by name and get the handle its bytes are held under.
 * `name` is a relative path under the asset root, spelled with `/`, as
 * UTF-8 of `name_len` bytes — not NUL-terminated. ZERO IS THE MISS, a
 * value rather than a panic, because a panic in an `extern "C"` frame is
 * an uncatchable abort (docs/traps.md); the BINDING raises with
 * `kaya_asset_why_not`'s sentence. No mode argument; each call reads.
 */
uint64_t kaya_asset_open(const uint8_t *name, uintptr_t name_len);
/**
 * An open asset's bytes. Returns the pointer and writes the length;
 * NULL for a handle already released or never minted. The pointer
 * borrows core memory and stays valid until `kaya_asset_release` —
 * copy, then release, exactly as the occurrence blob's contract says.
 */
const uint8_t *kaya_asset_bytes(uint64_t handle, uintptr_t *len);
/**
 * An open asset's byte count, for a binding that sizes a buffer before
 * it copies. 0 for a dead handle — and an asset is never legitimately
 * 0 bytes (wall 2 refuses an empty file at the open), so 0 here means
 * the handle, never the file.
 */
uintptr_t kaya_asset_len(uint64_t handle);
/**
 * THE BLOB REDEMPTION: register this asset's bytes into the pending table
 * and get the handle a record will carry. The `Arc` is cloned, not the
 * bytes, which is what makes this different from `bytes()` plus
 * `kaya_blob_register`. The handle obeys the pending table's lifetime; 0
 * for a dead asset handle, so a redemption of something never opened
 * cannot register empty bytes that would sail through a lowering.
 */
uint64_t kaya_asset_blob(uint64_t handle);
/**
 * Drop an open asset. Idempotent: a handle already released, or never
 * minted, is a no-op rather than an error, so a binding's finalizer
 * needs no bookkeeping of its own.
 */
void kaya_asset_release(uint64_t handle);
/**
 * Why `kaya_asset_open(name)` would answer 0 — the whole sentence in UTF-8,
 * written into `out` and truncated to `cap`, returning the length it really
 * has so a caller can size a buffer and ask again. An EMPTY sentence
 * (return 0) means the asset resolves, which is what makes this total.
 * THE PROSE IS NOT WRITTEN HERE: crates/kaya/src/assets.rs's
 * `asset_why_not` is the one author, so a scene can freeze the bytes once.
 */
uintptr_t kaya_asset_why_not(const uint8_t *name, uintptr_t name_len, uint8_t *out, uintptr_t cap);
/**
 * The bytes of the app's data directory (§4), created on first ask.
 * Returns the FULL length and writes min(len, cap) bytes, so a caller
 * sizes with `cap` 0 and asks again — `kaya_fault`'s shape. 0 means
 * there is none yet (Android before attach).
 *
 * # Safety
 * `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_app_data_dir(uint8_t *out, uintptr_t cap);
/**
 * The date (packed YYYYMMDD) at `length`, in the process locale.
 *
 * # Safety
 * `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_date(int64_t packed, int64_t length, uint8_t *out, uintptr_t cap);
/**
 * The date with its weekday and no year (`Mon, Sep 7` in en-US).
 *
 * # Safety
 * `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_date_weekday(int64_t packed, uint8_t *out, uintptr_t cap);
/**
 * The time (packed HHMM) at `length`, in the process locale and the
 * user's hour cycle.
 *
 * # Safety
 * `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_time(int64_t packed, int64_t length, uint8_t *out, uintptr_t cap);
/**
 * Both together, one length.
 *
 * # Safety
 * `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_date_time(int64_t date,
                             int64_t time,
                             int64_t length,
                             uint8_t *out,
                             uintptr_t cap);
/**
 * A number with the locale's separators; `options` may be null.
 *
 * # Safety
 * `options` must be null or valid; `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_number(double value,
                          const struct KayaNumberOptions *options,
                          uint8_t *out,
                          uintptr_t cap);
/**
 * A fraction as the locale's percentage; `options` may be null.
 *
 * # Safety
 * `options` must be null or valid; `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_percent(double value,
                           const struct KayaNumberOptions *options,
                           uint8_t *out,
                           uintptr_t cap);
/**
 * An amount in the ISO 4217 currency `code`.
 *
 * # Safety
 * `code` must be a NUL-terminated string; `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_fmt_currency(double value, const char *code, uint8_t *out, uintptr_t cap);
/**
 * The process locale and its settings as one line: the BCP-47 tag, the
 * hour cycle (`12` or `24`), the first weekday (1 Monday … 7 Sunday), the
 * calendar and the numbering system, space-separated. Every binding
 * answers a record from it.
 *
 * # Safety
 * `out` must be null or valid for `cap` bytes.
 */
uintptr_t kaya_locale(uint8_t *out, uintptr_t cap);
/**
 * The layout direction the locale asks for: 0 left-to-right, 1 right-to-left.
 */
uint32_t kaya_direction(void);
/**
 * The text scale the platform reported, 1.0 until one does.
 */
double kaya_text_scale(void);
/**
 * Load the app's catalog, `l10n/<app>.<locale>.ftl` under the asset root
 * with the fallback chain (docs/compliance-plan.md §2.4). Once, at startup.
 *
 * # Safety
 * `app` must be a NUL-terminated string.
 */
void kaya_catalog(const char *app);
/**
 * The message `key` with `args` filled, from the loaded catalog.
 *
 * # Safety
 * `key` must be NUL-terminated; `args` must be null or valid for `nargs`
 * records whose `name` and `s` are NUL-terminated; `out` must be null or
 * valid for `cap` bytes.
 */
uintptr_t kaya_tr(const char *key,
                  const struct KayaTrArg *args,
                  uintptr_t nargs,
                  uint8_t *out,
                  uintptr_t cap);
/**
 * 1 = present, with `*len` the full length and min(len, cap) bytes
 * written into `out`; 0 = absent, which includes a key holding another
 * type.
 *
 * # Safety
 * `key` must be valid for `key_len` bytes; `out` null or valid for `cap`;
 * `len` null or valid for one `usize`.
 */
int32_t kaya_pref_get_string(const uint8_t *key,
                             uintptr_t key_len,
                             uint8_t *out,
                             uintptr_t cap,
                             uintptr_t *len);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes; `out` valid for one `i64`.
 */
int32_t kaya_pref_get_i64(const uint8_t *key, uintptr_t key_len, int64_t *out);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes; `out` valid for one `double`.
 */
int32_t kaya_pref_get_f64(const uint8_t *key, uintptr_t key_len, double *out);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes; `out` valid for one byte.
 */
int32_t kaya_pref_get_bool(const uint8_t *key, uintptr_t key_len, uint8_t *out);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes and `value` for `value_len`.
 */
void kaya_pref_set_string(const uint8_t *key,
                          uintptr_t key_len,
                          const uint8_t *value,
                          uintptr_t value_len);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes.
 */
void kaya_pref_set_i64(const uint8_t *key, uintptr_t key_len, int64_t value);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes.
 */
void kaya_pref_set_f64(const uint8_t *key, uintptr_t key_len, double value);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes.
 */
void kaya_pref_set_bool(const uint8_t *key, uintptr_t key_len, uint8_t value);
/**
 * # Safety
 * `key` must be valid for `key_len` bytes.
 */
void kaya_pref_remove(const uint8_t *key, uintptr_t key_len);
/**
 * Fetch the bytes an occurrence's blob value named. Returns the
 * pointer and writes the length; NULL for a handle already released.
 * The pointer borrows core memory and stays valid until
 * `kaya_occurrence_blob_release` — copy, then release.
 */
const uint8_t *kaya_occurrence_blob(uint64_t handle, uintptr_t *len);
/**
 * Drop an occurrence blob. Idempotent: a handle already released, or
 * never minted, is a no-op rather than an error, so a binding's
 * decode path needs no bookkeeping of its own.
 */
void kaya_occurrence_blob_release(uint64_t handle);
/**
 * Submit one transaction: `len` bytes of records at `records`, applied
 * atomically on the UI thread. The buffer is copied before this call
 * returns. Malformed records are a broken binding and fail loudly.
 * Blob references resolve against the pending registration table,
 * which drains at this boundary whether referenced or not.
 */
void kaya_submit(const uint8_t *records, uintptr_t len);
/**
 * Function-floor consumption: block until the next occurrence and hand back
 * one complete record — header included, the ring's own bytes — or
 * `KAYA_OCCURRENCE_SHUTDOWN` / `KAYA_OCCURRENCE_WOKEN`. One app thread, not
 * mixed with direct ring access. BOTH SENTINELS NULL THE POINTER, so a
 * forgotten WOKEN cannot re-dispatch the last occurrence; THE CORE OWNS THE
 * BYTES, no size cap, until this thread's NEXT call (docs/traps.md, "A
 * caller-sized occurrence buffer").
 *
 * # Safety
 * `record` must be a valid place to write a pointer.
 */
uintptr_t kaya_next_occurrence(const uint8_t **record);
/**
 * Wake this process's app thread from wherever it is parked waiting for
 * occurrences. SAFE FROM ANY THREAD — the only entry here that is, and
 * harmless with nothing queued. In the sugar languages the BINDING calls it
 * inside its post; a C guest owns its queue and calls it itself. CLOSURES
 * DO NOT CROSS THIS ABI: all the core owes a posting thread is the wake-up.
 */
void kaya_wake(void);
/**
 * Redeem a handle for an open descriptor. THE ONE ENTRY HERE THAT IS SAFE
 * FROM ANY THREAD, alongside kaya_wake. Returns 0 on success and writes
 * `out_fd` plus `out_seekable`, the errno-shaped failure otherwise: the
 * open is FALLIBLE in ways the pick is not, since no picker lets you
 * request write. RESOLVE UNDER THE LOCK, RELEASE, THEN OPEN — holding it
 * across the open would serialize every concurrent open.
 */
int32_t kaya_open_picked(uint64_t handle,
                         uint32_t mode,
                         int64_t *out_handle,
                         uint32_t *out_seekable);