bindings/python/kaya/runtime.py

"""kaya runtime for Python guests: loading, the function floor, and the
occurrence loop. Hand-written; wire.py beside it is generated.
"""

from __future__ import annotations

import ctypes
import os
import pathlib
import sys
from collections.abc import Callable, Sequence
from typing import IO, Any

from . import wire
from .wire import OCC_BUTTON_CLICKED, OCC_TEXT_CHANGED, OCC_TOGGLED, parse_occurrence
from .wire import SPEC_HASH


# The host owns the platform loop on these two, so run() parks as the
# occurrence consumer instead of entering kaya_run
# (docs/python-mobile-plan.md §D2). The two strings are sys.platform's
# own values (PEP 730/738).
HOSTED_ENTRY = sys.platform in ("ios", "android")


def _find_library() -> str:
    if lib := os.environ.get("KAYA_LIB"):
        return lib
    name = {"darwin": "libkaya.dylib", "win32": "kaya.dll"}.get(
        sys.platform, "libkaya.so"
    )
    here = pathlib.Path(__file__).resolve().parent
    for base in [here, *here.parents]:
        for candidate in [base / name, base / "target" / "debug" / name]:
            if candidate.exists():
                return str(candidate)
    raise FileNotFoundError(f"{name} not found; build with cargo or set KAYA_LIB")


def _load_library() -> ctypes.CDLL:
    # The one platform-dispatched step (docs/python-mobile-plan.md §D3):
    # iOS needs -force_load on libkaya.a or dlsym answers NULL, and
    # Android must load by soname, never ctypes.util.find_library.
    if sys.platform == "ios":
        return ctypes.CDLL(None)
    if sys.platform == "android":
        return ctypes.CDLL("libkaya.so")
    return ctypes.CDLL(_find_library())


_lib = _load_library()

_lib.kaya_spec_hash.restype = ctypes.c_uint64
if _lib.kaya_spec_hash() != SPEC_HASH:
    raise RuntimeError(
        f"kaya: library speaks spec {_lib.kaya_spec_hash():#018x}, this binding was "
        f"generated from {SPEC_HASH:#018x} — rebuild the library or regenerate bindings"
    )
_lib.kaya_next_occurrence.argtypes = [ctypes.POINTER(ctypes.POINTER(ctypes.c_uint8))]
_lib.kaya_next_occurrence.restype = ctypes.c_size_t
_lib.kaya_submit.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_submit.restype = None
_lib.kaya_blob_register.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_blob_register.restype = ctypes.c_uint64
_lib.kaya_occurrence_blob.argtypes = [ctypes.c_uint64,
                                      ctypes.POINTER(ctypes.c_size_t)]
_lib.kaya_occurrence_blob.restype = ctypes.POINTER(ctypes.c_uint8)
_lib.kaya_occurrence_blob_release.argtypes = [ctypes.c_uint64]
_lib.kaya_occurrence_blob_release.restype = None
_lib.kaya_run.restype = ctypes.c_int32
_lib.kaya_open_picked.argtypes = [
    ctypes.c_uint64,
    ctypes.c_uint32,
    ctypes.POINTER(ctypes.c_int64),
    ctypes.POINTER(ctypes.c_uint32),
]
_lib.kaya_open_picked.restype = ctypes.c_int32
# The asset table (docs/assets-plan.md).
_lib.kaya_asset_open.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_asset_open.restype = ctypes.c_uint64
_lib.kaya_asset_bytes.argtypes = [ctypes.c_uint64,
                                  ctypes.POINTER(ctypes.c_size_t)]
_lib.kaya_asset_bytes.restype = ctypes.POINTER(ctypes.c_uint8)
_lib.kaya_asset_len.argtypes = [ctypes.c_uint64]
_lib.kaya_asset_len.restype = ctypes.c_size_t
_lib.kaya_asset_blob.argtypes = [ctypes.c_uint64]
_lib.kaya_asset_blob.restype = ctypes.c_uint64
_lib.kaya_asset_release.argtypes = [ctypes.c_uint64]
_lib.kaya_asset_release.restype = None
_lib.kaya_asset_why_not.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                    ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_asset_why_not.restype = ctypes.c_size_t

# The app's own places (docs/tasks-s4-plan.md §4): the data directory
# and the typed preferences store.
_lib.kaya_app_data_dir.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_app_data_dir.restype = ctypes.c_size_t
_lib.kaya_pref_get_string.argtypes = [
    ctypes.c_char_p, ctypes.c_size_t, ctypes.c_char_p, ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_size_t)]
_lib.kaya_pref_get_string.restype = ctypes.c_int
_lib.kaya_pref_get_i64.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                   ctypes.POINTER(ctypes.c_int64)]
_lib.kaya_pref_get_i64.restype = ctypes.c_int
_lib.kaya_pref_get_f64.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                   ctypes.POINTER(ctypes.c_double)]
_lib.kaya_pref_get_f64.restype = ctypes.c_int
_lib.kaya_pref_get_bool.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                    ctypes.POINTER(ctypes.c_uint8)]
_lib.kaya_pref_get_bool.restype = ctypes.c_int
_lib.kaya_pref_set_string.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                      ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_pref_set_string.restype = None
_lib.kaya_pref_set_i64.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                   ctypes.c_int64]
_lib.kaya_pref_set_i64.restype = None
_lib.kaya_pref_set_f64.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                   ctypes.c_double]
_lib.kaya_pref_set_f64.restype = None
_lib.kaya_pref_set_bool.argtypes = [ctypes.c_char_p, ctypes.c_size_t,
                                    ctypes.c_uint8]
_lib.kaya_pref_set_bool.restype = None
_lib.kaya_pref_remove.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_pref_remove.restype = None

# The formatter door and the catalog (docs/compliance-plan.md §3; the C
# API block in crates/kaya/src/capi.rs).
_lib.kaya_fmt_date.argtypes = [ctypes.c_int64, ctypes.c_int64, ctypes.c_char_p,
                               ctypes.c_size_t]
_lib.kaya_fmt_date.restype = ctypes.c_size_t
_lib.kaya_fmt_date_weekday.argtypes = [ctypes.c_int64, ctypes.c_char_p,
                                       ctypes.c_size_t]
_lib.kaya_fmt_date_weekday.restype = ctypes.c_size_t
_lib.kaya_fmt_time.argtypes = [ctypes.c_int64, ctypes.c_int64, ctypes.c_char_p,
                               ctypes.c_size_t]
_lib.kaya_fmt_time.restype = ctypes.c_size_t
_lib.kaya_fmt_date_time.argtypes = [ctypes.c_int64, ctypes.c_int64,
                                    ctypes.c_int64, ctypes.c_char_p,
                                    ctypes.c_size_t]
_lib.kaya_fmt_date_time.restype = ctypes.c_size_t


class KayaNumberOptions(ctypes.Structure):
    _fields_ = [("min_fraction_digits", ctypes.c_int32),
                ("max_fraction_digits", ctypes.c_int32),
                ("grouping", ctypes.c_bool)]


_lib.kaya_fmt_number.argtypes = [ctypes.c_double,
                                 ctypes.POINTER(KayaNumberOptions),
                                 ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_fmt_number.restype = ctypes.c_size_t
_lib.kaya_fmt_percent.argtypes = [ctypes.c_double,
                                  ctypes.POINTER(KayaNumberOptions),
                                  ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_fmt_percent.restype = ctypes.c_size_t
_lib.kaya_fmt_currency.argtypes = [ctypes.c_double, ctypes.c_char_p,
                                   ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_fmt_currency.restype = ctypes.c_size_t
_lib.kaya_locale.argtypes = [ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_locale.restype = ctypes.c_size_t
_lib.kaya_direction.restype = ctypes.c_uint32
_lib.kaya_text_scale.restype = ctypes.c_double
_lib.kaya_catalog.argtypes = [ctypes.c_char_p]
_lib.kaya_catalog.restype = None


class KayaTrArg(ctypes.Structure):
    _fields_ = [("name", ctypes.c_char_p), ("tag", ctypes.c_uint32),
                ("i", ctypes.c_int64), ("f", ctypes.c_double),
                ("s", ctypes.c_char_p)]


TR_INT = 0
TR_FLOAT = 1
TR_STR = 2
TR_DATE = 3
TR_TIME = 4

_lib.kaya_tr.argtypes = [ctypes.c_char_p, ctypes.POINTER(KayaTrArg),
                         ctypes.c_size_t, ctypes.c_char_p, ctypes.c_size_t]
_lib.kaya_tr.restype = ctypes.c_size_t

# CAP_AUX_WINDOWS is the core's number written again — ctypes has no
# header to read it out of; tools/check-sugar-surface.py holds it to
# crates/kaya/src/scene.rs.
_lib.kaya_capabilities.restype = ctypes.c_uint64
CAP_AUX_WINDOWS = 1
CAP_NOTIFICATIONS = 2


def capability_bits() -> int:
    """The raw capability word."""
    return _lib.kaya_capabilities()


_occ_record = ctypes.POINTER(ctypes.c_uint8)()


def _occurrence_blob(handle: int) -> bytes:
    """Redeem an occurrence blob for its bytes, and release it.

    COPY THEN RELEASE, in that order: the pointer borrows core memory
    that the release frees.
    """
    length = ctypes.c_size_t(0)
    data = _lib.kaya_occurrence_blob(handle, ctypes.byref(length))
    payload = b"" if not data else ctypes.string_at(data, length.value)
    _lib.kaya_occurrence_blob_release(handle)
    return payload


# Installed rather than imported: wire.py is generated and loads no
# library of its own.
wire.occurrence_blob = _occurrence_blob


def submit(*records: bytes) -> None:
    """Submit one transaction: the concatenation of packed records,
    applied atomically."""
    tx = b"".join(records)
    _lib.kaya_submit(tx, len(tx))


def register_blob(data: bytes | bytearray | memoryview) -> int:
    """Register bulk payload bytes with the core, returning the handle
    the next submit consumes whether referenced or not."""
    if not isinstance(data, (bytes, bytearray, memoryview)):
        raise TypeError(
            f"kaya: blob data must be bytes, not {type(data).__name__}"
        )
    data = bytes(data)
    return _lib.kaya_blob_register(data, len(data))


# Returned instead of a record size. WOKEN is deliberately smaller than
# any real record (a header alone is 8 bytes), so a consumer that has
# not learned about it cannot mistake it for a length and read past the
# buffer.
_OCCURRENCE_SHUTDOWN = 0
_OCCURRENCE_WOKEN = 1

# A distinct object rather than None, which already means shutdown. Typed
# `Any` because it rides next_occurrence's own return slot: the consumer
# tests it BY IDENTITY before unpacking the tuple (App._dispatch_loop), and
# a sentinel is the one place a dynamic type is the honest one.
WOKEN: Any = object()


def wake() -> None:
    """Return the app thread from next_occurrence. Safe from any thread."""
    _lib.kaya_wake()


def next_occurrence() -> tuple[int, Any, list[Any], Any] | None:
    """Block for the next occurrence; None when the core has shut down,
    WOKEN when a background thread has queued work for the app thread.

    Returns (kind, id, keys, payload): keys is [] when id is a widget
    id, else id is a template node id and keys is the stamped copy's
    key path, outermost first. payload is the entry's new text for
    OCC_TEXT_CHANGED, the checkbox's new state for OCC_TOGGLED, None
    for clicks.
    """
    while True:
        size = _lib.kaya_next_occurrence(ctypes.byref(_occ_record))
        if size == _OCCURRENCE_SHUTDOWN:
            return None
        if size == _OCCURRENCE_WOKEN:
            # NO RECORD WAS HANDED OUT: decoding here would re-parse the
            # PREVIOUS one.
            return WOKEN
        # The core owns the bytes until the next call, so copy them out.
        kind, ident, keys, payload = parse_occurrence(
            ctypes.string_at(_occ_record, size))
        if ident is not None:
            return kind, ident, keys, payload


def run() -> int:
    """Enter the core on the calling thread (must be the process main
    thread); returns the exit code when the app ends."""
    return _lib.kaya_run()


def asset_open(name: str) -> int:
    """Open an asset by name; 0 is the MISS, and asset_miss_sentence says why."""
    raw = name.encode("utf-8")
    return _lib.kaya_asset_open(raw, len(raw))


def asset_bytes(handle: int) -> bytes:
    """An open asset's bytes, copied out of core memory.
